# Copyright 2024-2025 Christian Mazakas
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

[package]
name = "fiona"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.31.1", features = ["event", "socket", "net"] }
slotmap = { version = "1.1.1" }
axboe-liburing = { git = "https://github.com/cmazakas/liburing.git", rev = "4c288fe8bedb5e0c4e709ef1d05338dc9ddf318d" }

[features]
sanitizers = ["axboe-liburing/sanitizers"]

[dev-dependencies]
futures = "0.3.31"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.45", features = ["derive"] }
rayon = "1.11.0"
blake2 = "0.10.6"

[profile.release-with-debug]
inherits = "release"
debug = "full"

[profile.lto]
inherits = "release"
lto = "thin"

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "echo2"
harness = false

[[bench]]
name = "echo3"
harness = false

[[bench]]
name = "timer"
harness = false

[[bench]]
name = "ring_msg"
harness = false
