# Copyright 2024-2026 Christian Mazakas
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

[package]
name = "fiona"
version = "0.1.0"
edition = "2024"

[dependencies]
axboe-liburing = { git = "https://github.com/cmazakas/liburing.git", rev = "851245524b052c7eb50d896c47eea73af9465351" }
nix = { version = "0.31.1", features = ["event", "socket", "net"] }
rustls = "0.23.36"
rustls-pki-types = "1.14.0"
slotmap = { version = "1.1.1" }

[features]
sanitizers = ["axboe-liburing/sanitizers"]

[dev-dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.45", features = ["derive"] }
futures = "0.3.31"
rand = "0.9.2"
rayon = "1.11.0"
tokio = { version = "1.49.0", features = ["full"] }
webpki-roots = "1.0.6"

[profile.release-with-debug]
inherits = "release"
debug = "full"

[profile.lto]
inherits = "release"
lto = "thin"

[[bench]]
name = "echo2"
harness = false

[[bench]]
name = "timer"
harness = false

[[bench]]
name = "ring_msg"
harness = false
